--- a/client-local.yml
+++ b/client-local.yml
@@ -4,3 +4,9 @@ jdbc:
   url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true;useAffectedRows=true
   username: root
   password: root
+spring:
+  rabbitmq:
+    host: 120.26.231.118
+    port: 5672
+    username: guest
+    password: xuexin_guest_2017
