--- a/organ-local.yml
+++ b/organ-local.yml
@@ -1,17 +1,11 @@
-#数据库配置
-spring:
-  datasource:
-    driver: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useAffectedRows=true
-    username: root
-    password: root
-#jdbc:
-#  driver: com.mysql.jdbc.Driver
-#  url: jdbc:mysql://114.55.183.34:3306/xuexindb_dev?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-#  #  username: xx_localdev
-#  #  password: djdkre3jr[1320j
-#  username: organuser
-#  password: 0RgAu]28sdj
+
+jdbc:
+  driver: com.mysql.jdbc.Driver
+  url: jdbc:mysql://114.55.183.34:3306/xuexindb_dev?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+  #  username: xx_localdev
+  #  password: djdkre3jr[1320j
+  username: organuser
+  password: 0RgAu]28sdj
 #spring:
 #  datasource:
 #    type: com.alibaba.druid.pool.DruidDataSource
